Result images, readme update

--- a/OnroadLanesDetector.ipynb
+++ b/OnroadLanesDetector.ipynb
@@ -19,6 +19,7 @@
     "        - common image processing pipeline\n",
     "        - processing result conversion (BGR to RGB)\n",
     "        - result image output\n",
+    "        \n",
     "    BGR video processing consists of next steps:\n",
     "        - video file capturing. File expected to exist on disk\n",
     "        - video frame processing loop:\n",
@@ -32,7 +33,8 @@
     "        - detection area filter. Creates new b/w image output of color filter result\n",
     "        - edge detection\n",
     "        - lines detection with help of Hough transform method (cv2.HoughLines tool)\n",
-    "        - lanes detection with help of custom algorithm that does line groups detection and median line calculation for each found group\n",
+    "        - lanes detection with help of custom algorithm that does line groups detection and median line\n",
+    "          calculation for each found group\n",
     "        - lane lines Polar coortinate to Cartesian coordinate conversion, drawing lane lines\n",
     "        - result image composition from initial frame and detected lane lines images\n",
     "        - result image returned to program for output/further operations\n",
